# soul

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cmake-format.yaml  cpp.hint  soul.sln  vcpkg.json
demo/: CMakeLists.txt  camera_manipulator.cpp  camera_manipulator.h  data.h  final_gather_render_module.cpp  final_gather_render_module.h  gbuffer_gen_render_module.cpp  gbuffer_gen_render_module.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_render_module.h  ktx_bundle.cpp  ktx_bundle.h  scene.h  shader_generator.cpp  shader_generator.h  shadow_map_gen_render_module.cpp  shadow_map_gen_render_module.h  test.cpp  utils.h  voxel_gi_debug_render_module.cpp  voxel_gi_debug_render_module.h  voxel_light_inject_render_module.cpp  voxel_light_inject_render_module.h  voxelize_render_module.cpp  voxelize_render_module.h
demo/ui/: data.h  menu_bar.cpp  menu_bar.h  metric_panel.cpp  panels.h  scene_config_panel.cpp  scene_panel.cpp  ui.h  widget.cpp  widget.h
demo/widget/: memory_profiler_panel.cpp  memory_profiler_panel.h  scene_panel.h
dependencies/: CMakeLists.txt  argparse.h  cgltf.h  dirent_portable.h  imguifilesystem.cpp  imguifilesystem.h  portable-file-dialogs.h  stb_image.h  tiny_gltf.h  tiny_obj_loader.h
dependencies/dxc/: CMakeLists.txt
dependencies/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
dependencies/mdl/: CMakeLists.txt
dependencies/mikktspace/: mikktspace.cpp  mikktspace.h
dependencies/slang/: CMakeLists.txt
khaos/: CMakeLists.txt  hf_tokenizer.cpp  hf_tokenizer.h  main.cpp  script_system.cpp  script_system.h  store.cpp  store.h  streaming_buffer.cpp  streaming_buffer.h  text_completion_backend.cpp  text_completion_backend.h  text_completion_system.h  textgen_backend.cpp  textgen_backend.h  textgen_system.cpp  textgen_system.h  type.cpp  type.h  view.cpp  view.h  virtual_filesystem.h
khaos/modules/: khaos.h  lua_util.h  stylua.toml  textgen.cpp  textgen.h  textgen.lua
khaos/panels/: chatbot_panel.h  chatbot_setting_panel.cpp  chatbot_setting_panel.h  game_panel.cpp  game_panel.h  game_setting_panel.cpp  journey_list_panel.cpp  menu_bar.cpp  menu_bar.h  new_project_popup.cpp  project_selection_panel.cpp  project_selection_panel.h
khaos/services/: text_completion_api.cpp  text_completion_api.h
khaos/store/: app_setting.cpp  store.cpp  store.h
khaos/tokenizers_data/: LICENSE
khaos/ui/: app_setting_view.cpp  app_setting_view.h  chat_view.cpp  chat_view.h  chatbot_setting_panel.cpp  chatbot_setting_panel.h  chatbot_setting_view.cpp  chatbot_setting_view.h  dialog_text.cpp  dialog_text.h  game_panel.cpp  game_panel.h  game_setting_panel.cpp  game_setting_panel.h  game_view.cpp  game_view.h  journey_list_panel.cpp  journey_list_panel.h  markdown.h  menu_bar.cpp  menu_bar.h  new_project_popup.cpp  new_project_popup.h  popup.h  popup_new_item.cpp  popup_new_item.h  project_selection_panel.cpp  project_selection_panel.h  prompt_format_presets_group.h  sampler_presets_view.cpp  sampler_presets_view.h
kyuren/: CMakeLists.txt  data.h  pykyuren.cpp  pykyuren.h  pykyuren_binding.cpp  render_pipeline.cpp  setup.py.in  utils.h
kyuren/addon/: __init__.py  utils.py
kyuren/blenkyu/: CMakeLists.txt  depsgraph.cpp  depsgraph.h  light.h  mesh.cpp  mesh.h  object.cpp  object.h
kyuren/render_jobs/: lighting_render_job.cpp  lighting_render_job.h  scene_render_job.cpp  scene_render_job.h  shadow_map_render_job.cpp  shadow_map_render_job.h
renderlab/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  config.h  ecs.h  env_map.hlsl  hybrid_render_pipeline.h  main.cpp  mesh_preprocessor.cpp  mesh_preprocessor.h  render_graph_util.h  render_node.h  render_pipeline.cpp  render_pipeline.h  render_pipeline.shared.hlsl  render_pipeline_main.hlsl  scene.cpp  scene.h  scene.hlsl  type.h  type.shared.hlsl
renderlab/asset/: asset.h  asset_system.h
renderlab/demo/: demo.h  pica_pica_demo.cpp  pica_pica_demo.h  sponza_demo.cpp  sponza_demo.h
renderlab/editor/: panel.h  store.cpp  store.h  view.cpp  view.h
renderlab/importer/: assimp_importer.h  gltf_importer.cpp  gltf_importer.h  gltf_importer_tmp.cpp
renderlab/math/: matrix.hlsl  shading_frame.hlsl
renderlab/render_nodes/: render_constant_name.h
renderlab/utils/: bnd_sampler.hlsl  color_helpers.hlsl  constant.hlsl  math.hlsl  reprojection.hlsl  util.h
sample/: CMakeLists.txt
sample/buffer_transfer_command/: CMakeLists.txt  buffer_transfer_command_sample.cpp
sample/common/: CMakeLists.txt  app.cpp  app.h  builtins.h  camera_manipulator.cpp  camera_manipulator.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_pass.cpp  imgui_pass.h  ktx_bundle.cpp  ktx_bundle.h  obj_loader.cpp  obj_loader.h  soul_config.cpp  texture_2d_pass.cpp  texture_2d_pass.h
sample/compute_shader/: CMakeLists.txt  compute_shader_sample.cpp
sample/draw_indexed_indirect/: CMakeLists.txt  draw_indexed_indirect_sample.cpp
sample/gpu_address_sample/: CMakeLists.txt  gpu_address_sample.cpp
sample/imgui/: CMakeLists.txt  imgui_sample.cpp
sample/index_buffer/: CMakeLists.txt  index_buffer_sample.cpp  main.cpp
sample/mdl/: CMakeLists.txt  mdl_sample.cpp
sample/msaa_sample/: CMakeLists.txt  msaa_sample.cpp
sample/multithread_raster_sample/: CMakeLists.txt  multithread_raster_sample.cpp
sample/rt_basic/: CMakeLists.txt  rt_basic_sample.cpp
sample/storage_buffer/: CMakeLists.txt  storage_buffer_sample.cpp
sample/texture_2d/: CMakeLists.txt  (+1 more)
soul/: CMakeLists.txt  imgui.ini  soul.vcxproj  soul.vcxproj.filters
test/: .clang-tidy  CMakeLists.txt  builtins.h  common_test.h  large_uint64_enum.h  test_array.cpp  test_bit_vector.cpp  test_bitset.cpp  test_chunked_sparse_pool.cpp  test_comp_str.cpp  test_cstring.cpp  test_deque.cpp  test_flag_set.cpp  test_hash.cpp  test_intrusive_list.cpp  test_maybe_null.cpp  test_meta.cpp  test_not_null.cpp  test_option.cpp  test_result.cpp  test_robin_table.cpp  test_sbo_vector.cpp  test_sbo_vector.cpp~  test_soa_vector.cpp  test_string.cpp  test_tuple.cpp  test_util.cpp  test_variant.cpp  test_vector.cpp  util.cpp  util.h
(+714 files in other folders)
